--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -154,6 +154,9 @@ Por parte de la aplicación queda resolver pequeños bug. Durante la reunión mi
   
   En la aplicación hay que añadir el icono que se usará para la app una vez instalada.
   
+\subsection{Sprint 29 (17/07/2020 - 20/07/2020)}
+En este último sprint los objetivos eran revisar la documentación. Cerrar la aplicación y subir el release. Preparar y grabar el vídeo para la presentación.
+  
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
