--- a/Documentación/tex/E_Manual_usuario.tex
+++ b/Documentación/tex/E_Manual_usuario.tex
@@ -17,7 +17,7 @@ También es necesario disponer de un MergeCube. Para utilizar el Mergecube tenem
 
 \section{Instalación}
 
-Dado que la aplicación no se ha publicado en Play Store, se deberá descargar el APK desde (\href{URL}{text}ENLACE CARPETA REPOSITORIO).
+Dado que la aplicación no se ha publicado en Play Store, se deberá descargar el APK desde (\href{https://github.com/smi0010/TFG_Herramientas_Realidad_Aumentada/releases/tag/UBU_AR}{UBUAR}).
 La instalación de la aplicación es sencilla, como la de cualquier otra APK. Una vez descargado el APK en el dispositivo, ejecutarle y seguir los pasos. 
 
 Dado que la aplicación no se ha descargado desde una fuente oficial, como podría ser la Play Store, es posible que en el primer intento de instalación, el sistema solicite habilitar la opción de instalar aplicaciones de origen desconocido, que por defecto en los dispositivos viene desactivada.
