--- a/Documentación/tex/1_Introduccion.tex
+++ b/Documentación/tex/1_Introduccion.tex
@@ -17,4 +17,5 @@ En el segundo tipo la detección del entorno, la cual podrá detectar diferentes
 
 En el proyecto se estudiarán diferentes herramientas de realidad aumentada, comparándolas y, posteriormente, escogeremos una con la que desarrollar un ejemplo en el que poner en práctica las diferentes características y funcionalidades de la herramienta.
 
+El APK de la aplicación esta disponible en el repositorio en el enlace :\href{https://github.com/smi0010/TFG_Herramientas_Realidad_Aumentada/releases/tag/UBU_AR}{UBU AR}.
 
