--- a/Documentación/tex/6_Trabajos_relacionados.tex
+++ b/Documentación/tex/6_Trabajos_relacionados.tex
@@ -2,11 +2,6 @@
 
 Son numerosos los trabajos y estudios que hoy en día se realizan respecto a las tecnologías de realidad aumentada, en claro reflejo de su creciente interes....  En este apartado veremos algunos de los trabajos que destacan.
 
-\section{Artículos}
-\subsection{Realidad Aumentada, Educación y Museos}
- 
- Se trata de un estudio sobre la realidad aumentada
-
 \section{Paginas Web}
 \subsection{Realidad aumentada en navegador Web}
 \subsubsection{8thWall}
@@ -39,7 +34,7 @@ Un ejemplo sería, en una imagen en la que salen varios arboles, si queremos pon
 
 \subsection{3D-Viewer-v2}
 
-Se trata de un proyecto de fin de grado con el objetivo de crear un Visor 3D para arqueología, dirigido para la docencia del Grado en Historia y Patrimonio de la universidad de Burgos.
+Se trata de un proyecto de fin de grado con el objetivo de crear un Visor 3D para arqueología~\cite{3D-Viewer-v2}, dirigido para la docencia del Grado en Historia y Patrimonio de la universidad de Burgos.
 La aplicación en este proyecto, perimte a alumnos y profesores visualizar modelos 3D óseos, también tiene la posibilidad de añadir anotaciones y medidas. Este proyecto es interesante pues, es un claro ejemplo que los modelos 3D se pueden llevar para la mejora de la docencia. En este caso, está aplicación podría ser mejorada incluyéndola un funcionamiento con realidad aumentada.
 
 Si se cuenta con un modo de realidad aumentada, los usuarios también podrán observar por ejemplo como serían las proporciones reales proyectadas.
