--- a/Documentación/bibliografia.bib
+++ b/Documentación/bibliografia.bib
@@ -64,14 +64,14 @@
 
 @misc{google, 
 	title={ARCore overview  |  Google Developers}, 
-	url={https://developers.google.com/ar/discover}, 
+	howpublished ={\url{https://developers.google.com/ar/discover}}, 
 	journal={Google}, 
 	publisher={Google}
 }
 
 @misc{apple_inc, 
 	title={ARKit 3 - Augmented Reality}, 
-	url={https://developer.apple.com/augmented-reality/arkit/}, 
+	howpublished={\url{https://developer.apple.com/augmented-reality/arkit/}}, 
 	journal={Apple Developer}, author={Apple Inc}
 }
 
