--- a/Documentación/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/Documentación/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -2,25 +2,25 @@
 
 
 \section{Conclusiones}
-A pocos días de la entrega, creo poder decir que si se han cumplido los objetivos plantados al comienzo del proyecto. Se ha realizado un estudio de las diferentes herramientas de realidad aumentada actuales, y se ha conseguido realizar una aplicación que pone aprueba las funcionalidades de una de estas herramientas, pensando en un ámbito educativo. Lamentablemente no ha sido posible implementar todas las funcionalidades de realidad aumentada que nos habría gustado, pues algunas de estas funcionalidades únicamente están disponible en ciertos dispositivos móviles.
+A pocos días de la entrega, creo poder decir que si se han cumplido los objetivos plantados al comienzo del proyecto. Se ha realizado un estudio de las diferentes herramientas de realidad aumentada actuales, y se ha conseguido realizar una aplicación que pone a prueba las funcionalidades de una de estas herramientas, pensando en un ámbito educativo. Lamentablemente no ha sido posible implementar todas las funcionalidades de realidad aumentada que nos habría gustado, pues algunas de estas funcionalidades únicamente están disponible en ciertos dispositivos móviles.
 
 Se han adquirido conocimientos del desarrollo en Unity y de algunas de sus extensiones. También sobre las herramientas de realidad aumentada y que aspectos tener en cuenta a la hora de escoger una herramienta.
 
-El desarrollo de la aplicación al principio ha sido lento, pues en las primeras semanas no teníamos una idea clara sobre que tipo de ejercicio educativo realizar. Y es que algunas ideas, aun que eran buenas, su complejidad a la larga habría resultado problemática. Finalmente nos decantamos por simular las fases del crecimiento de una planta, pues dados los conocimientos que tenía me pareció que era una idea asumible de hacer.
+El desarrollo de la aplicación al principio ha sido lento, pues en las primeras semanas no teníamos una idea clara sobre que tipo de ejercicio educativo realizar. Y es que algunas ideas, aun que eran buenas, su complejidad a la larga habrían resultado problemática. Finalmente nos decantamos por simular las fases del crecimiento de una planta, pues dados los conocimientos que tenía me pareció que era una idea asumible de hacer.
 
-Uno de los problemas que surgieron a lo largo de la aplicación, fue a la hora escoger modelos 3D para utilizar. Si bien es cierto que hay multitud de modelos gratuitos, no siempre tienes la surte de que el modelo que mejor se puede acoplar a tu proyecto, pertenezca a uno de esos pack gratuitos. Por ejemplo a la hora de buscar plantas encontrar modelos para representar varias de sus fases es algo complejo, para solventar esto se decidió que varias de las fases fuesen con el mismo modelo, pero cambiando su escala.
+Uno de los problemas que surgieron a lo largo de la aplicación, fue a la hora escoger modelos 3D para utilizar. Si bien es cierto que hay multitud de modelos gratuitos, no siempre tienes la surte de que el modelo que mejor se puede acoplar a tu proyecto, pertenezca a uno de esos pack gratuitos. Por ejemplo, a la hora de buscar plantas encontrar modelos para representar varias de sus fases es algo complejo, para solventar esto se decidió que varias de las fases fuesen con el mismo modelo, pero cambiando su escala.
 
-El último problema ha destacar de la aplicación es el de la falta de experiencia con Unity, aunque si había trabajado con él anteriormente, no había realizado nada particularmente complejo. Esto lo he notado a la hora de escoger, diseñar o configurar algunos elementos. Por ejemplo, tuve problemas al inicio para conseguir detectar las partículas de agua que colisionaban con la planta.
+El último problema a destacar de la aplicación es el de la falta de experiencia con Unity, aunque si había trabajado con él anteriormente, no había realizado nada particularmente complejo. Esto lo he notado a la hora de escoger, diseñar o configurar algunos elementos. Por ejemplo, tuve problemas al inicio para conseguir detectar las partículas de agua que colisionaban con la planta.
 
-Considero que uno de las aspectos más importantes que he aprendido con este proyecto ha sido a gestionar mi tiempo de una manera mas eficiente.
+Considero que uno de las aspectos más importantes que he aprendido con este proyecto ha sido a gestionar mi tiempo de una manera más eficiente.
 
 Aunque que considero que la aplicación podría ser mejorable y que tuviera aun algo mas de contenido, como podría haber sido otro ejemplo aparte del de las plantas. Si estoy satisfecho con el resultado, y especialmente con los conocimientos adquiridos de las herramientas usadas y de las investigaciones realizadas.
 
 \section{Lineas de trabajo futuras}
 Tras concluir el desarrollo, puedo pensar en algunas tareas para posibles trabajos futuros.
 \begin{itemize}
-	\item En primer lugar, teniendo en cuenta uno de los aspectos que mas relevantes de la realidad aumentada hoy en día es la tendencia ha dejar de lado los marcadores físicos y centrarse en el reconocimiento sin marcadores, el reconocimiento del entorno que nos rodea.
-	Por ello una de los aspectos en los que se podría mejorar la aplicación es implementado este tipo de realidad aumentada, de una forma mas precisa y con mayor papel en el uso de la app.
+	\item En primer lugar, teniendo en cuenta uno de los aspectos que mas relevantes de la realidad aumentada hoy en día es la tendencia a dejar de lado los marcadores físicos y centrarse en el reconocimiento sin marcadores, el reconocimiento del entorno que nos rodea.
+	Por ello uno de los aspectos en los que se podría mejorar la aplicación es implementado este tipo de realidad aumentada, de una forma mas precisa y con mayor papel en el uso de la app.
 	
 	Si bien es cierto, que la principal limitación de esta realidad aumenta se encuentra en los dispositivos compatibles con ella, pero bastante posible que en unos años esta limitación pueda ser superada sin problemas.
 	\item Llevar la aplicación a otras plataformas como iOS o Windows. Por ejemplo sería interesante llevar la aplicación a Windows, usando Webcam.
