--- a/Documentación/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/Documentación/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -14,7 +14,7 @@ El último problema a destacar de la aplicación es el de la falta de experienci
 
 Considero que uno de las aspectos más importantes que he aprendido con este proyecto ha sido a gestionar mi tiempo de una manera más eficiente.
 
-Aunque que considero que la aplicación podría ser mejorable y que tuviera aun algo mas de contenido, como podría haber sido otro ejemplo aparte del de las plantas. Si estoy satisfecho con el resultado, y especialmente con los conocimientos adquiridos de las herramientas usadas y de las investigaciones realizadas.
+Aunque considero que la aplicación podría ser mejorable y que tuviera aún algo mas de contenido, como podría haber sido otro ejemplo aparte del de las plantas. Si estoy satisfecho con el resultado, y especialmente con los conocimientos adquiridos de las herramientas usadas y de las investigaciones realizadas.
 
 \section{Lineas de trabajo futuras}
 Tras concluir el desarrollo, puedo pensar en algunas tareas para posibles trabajos futuros.
