--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -3,7 +3,8 @@
 \section{Introducción}
  Para la organización del trabajo se ha utilizado GitHub\footnote{\url{https://github.com}} con la extensión de ZenHub\footnote{\url{https://www.zenhub.com/}} para facilitar el seguimiento de las issues gracias a las funcionalidades que ofrece la extensión.
  
-En el siguiente enlace se encuentra el repositorio del trabajo: \url{https://github.com/smi0010/TFG_Herramientas_Realidad_Aumentada}.
+En el siguiente enlace se encuentra el repositorio del trabajo\footnote{\url{https://github.com/smi0010/TFG_Herramientas_Realidad_Aumentada}.}.
+
 \section{Planificación temporal}
 
 En un principio, se ha llevado a cabo una reunión a la semana para cada sprint, en la que se exponían los avances realizados durante el sprint de la semana y la planificación del siguiente.
